# XAI_For_Stress_and_Mental_Health_Prediction

./: .env.sample  .gitignore  Project_PPT.pptx  Readme.md  Understand_the_Dataset.md  pyproject.toml
Backend/: main.py
Dataset/: Compress.py  Readme.md  loadData.py  pkl_to_csv.ipynb
Exploratory_Data_Analysis/: ECG_signal.ipynb  EDA_signal.ipynb  EMG_signal.ipynb  Readme.md  train_test.ipynb
Frontend/: .sample.env  package-lock.json  package.json  tailwind.config.ts
Frontend/frontend-next/: package-lock.json  tailwind.config.ts
Frontend/frontend-next/app/: globals.css  layout.tsx  page.tsx
Frontend/frontend-next/app/assessment/: page.tsx
Frontend/frontend-next/app/results/: page.tsx
Frontend/src/: Insight.ts  agent.ts
Frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
Frontend/src/app/Assessment/: page.tsx
Frontend/src/app/Results/: page.tsx
Frontend/src/app/assessment/: page.tsx
Frontend/src/components/: CTASection.tsx  FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  HowItWorksSection.tsx  Navbar.tsx
ModelTraining/: 01-featureExtraction.ipynb  02-preprocessing.ipynb  03-modelTraning.ipynb  EDA.ipynb  datacleaning.ipynb  preprocessing.ipynb  train.ipynb  train10.ipynb  train11.ipynb  train12.ipynb  train13.ipynb  train2.ipynb  train3.ipynb  train4.ipynb  train5.ipynb  train6.ipynb  train7.ipynb  train8.ipynb  train9.ipynb  train_model.py
ModelTraining/Exploratory_Data_Analysis/: ACC.ipynb  EMG_signal.ipynb  RESP_signal.ipynb  TEMP_signal.ipynb  overall.ipynb
XAI/: LIME.ipynb  SHAP.ipynb  featureImportance.ipynb
(+2 files in other folders)
